--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,18 @@ Et netus et malesuada fames.</string>
     <string name="recipe_notification_channel_name">Timer Notification Channel</string>
     <string name="settings">Settings</string>
     <string name="ok">Ok</string>
+    <string name="login">LOGIN</string>
+    <string name="take_a_pic">TAKE A PIC</string>
+    <string name="save">SAVE</string>
+    <string name="recipe_image">Recipe Image</string>
+    <string name="go_back">Go Back</string>
+    <string name="drag_handle">Drag Handle</string>
+    <string name="hint_serving">1\nserving(s)</string>
+    <string name="recipe_directions">Directions</string>
+    <string name="no_internet_connection">No Internet Connection.</string>
+    <string name="user_name">User Name</string>
+    <string name="user_meal_image">User Meal Image</string>
+    <string name="popular_recipes">Popular Recipes</string>
+    <string name="make_your_own_food_stay_at_home">Make your own food,\nstay at home</string>
+    <string name="recipe_name">Recipe name</string>
 </resources>
