--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@ Et netus et malesuada fames.</string>
     <string name="drag_handle">Drag Handle</string>
     <string name="hint_serving">1\nserving(s)</string>
     <string name="recipe_directions">Directions</string>
-    <string name="no_internet_connection">No Internet Connection.</string>
+    <string name="no_internet_connection">No Internet Connection.\nPlease Connect to the internet to use this feature</string>
     <string name="user_name">User Name</string>
     <string name="user_meal_image">User Meal Image</string>
     <string name="popular_recipes">Popular Recipes</string>
